- Implement GridView update method in MainActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
   <string name="app_name">Tile Slide</string>
-  <string name="moves_counter">Moves: </string>
+  <string name="moves_counter">Moves: %1$d </string>
+  <string name="illegal_move">Cannot move this tile!</string>
 </resources>
