- Minor formatting/Optimization

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
   <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="puzzle_image">Puzzle Image</string>
   <string name="num_tiles_default">3</string>
-  <string name="num_tiles_pref">Number of Puzzle Tiles</string>
+  <string name="num_tiles_pref">Puzzle Size</string>
   <string name="puzz_image_pref">Puzzle Image</string>
   <string name="preferences">Preferences</string>
 </resources>
